정규표현식

--- a/edu/day5.ipynb
+++ b/edu/day5.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -37,7 +37,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -82,17 +82,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "An error occurred: invalid literal for int() with base 10: 'f'\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "try:\n",
     "    # 예외가 발생할 수 있는 코드\n",
@@ -118,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -145,9 +137,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "항목이 없습니다\n"
+     ]
+    }
+   ],
    "source": [
     "data = {\"Sun\": 0, \"Mon\": 1, \"Tue\": 2, \"Wed\": 3, \"Thu\": 4, \"Fri\": 5, \"Sat\": 6}\n",
     "while True:\n",
@@ -163,16 +163,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "예시 파일1\n",
+      "Hello, world!\n",
+      "This is an example file.\n",
+      "We will use it to demonstrate file writing in Python.\n",
+      "We can write multiple lines at once.\n",
       "\n",
-      "['예시 파일2\\n', '예시 파일3']\n"
+      "\n",
+      "[]\n"
      ]
     }
    ],
@@ -192,6 +196,116 @@
     "print(lines)\n",
     "\n",
     "file.close()  # 파일을 닫습니다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "file = open(\"example.txt\", \"w\")\n",
+    "\n",
+    "# 파일에 문자열을 씁니다.\n",
+    "file.write(\"Hello, world!\\n\")\n",
+    "file.write(\"This is an example file.\\n\")\n",
+    "\n",
+    "# 파일에 문자열의 리스트를 씁니다.\n",
+    "lines = [\"We will use it to demonstrate file writing in Python.\\n\",\n",
+    "         \"We can write multiple lines at once.\\n\"]\n",
+    "file.writelines(lines)\n",
+    "\n",
+    "file.close()  # 파일을 닫습니다.\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "read() 함수 예시:\n",
+      "Hello, world!\n",
+      "This is an example file.\n",
+      "We will use it to demonstrate file writing in Python.\n",
+      "We can write multiple lines at once.\n",
+      "\n",
+      "\n",
+      "readline() 함수 예시:\n",
+      "Hello, world!\n",
+      "\n",
+      "\n",
+      "readlines() 함수 예시:\n",
+      "['Hello, world!\\n', 'This is an example file.\\n', 'We will use it to demonstrate file writing in Python.\\n', 'We can write multiple lines at once.\\n']\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"example.txt\", \"r\") as file:\n",
+    "    # 파일 내용 전체를 읽습니다.\n",
+    "    content = file.read()\n",
+    "    print(\"read() 함수 예시:\")\n",
+    "    print(content)\n",
+    "    '''\n",
+    "    read() 함수 예시:\n",
+    "    Hello, world!\n",
+    "    This is an example file.\n",
+    "    We will use it to demonstrate file writing in Python.\n",
+    "    We can write multiple lines at once.\n",
+    "    '''\n",
+    "\n",
+    "    # 파일에서 한 줄을 읽습니다.\n",
+    "    file.seek(0)  # 파일 포인터를 처음으로 돌립니다.\n",
+    "    line = file.readline()\n",
+    "    print(\"\\nreadline() 함수 예시:\")\n",
+    "    print(line)\n",
+    "    '''\n",
+    "    readline() 함수 예시:\n",
+    "    Hello, world!\n",
+    "    '''\n",
+    "    # 파일 전체를 읽고 각 줄을 리스트로 반환합니다.\n",
+    "    file.seek(0)  # 파일 포인터를 처음으로 돌립니다.\n",
+    "    lines = file.readlines()\n",
+    "    print(\"\\nreadlines() 함수 예시:\")\n",
+    "    print(lines)\n",
+    "\n",
+    "    '''\n",
+    "    readlines() 함수 예시:\n",
+    "['Hello, world!\\n', 'This is an example file.\\n', 'We will use it to demonstrate file writing in Python.\\n', 'We can write multiple lines at once.\\n']\n",
+    "    '''\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "03/18/2022\n",
+      "Yuna Kim\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "#날짜 표기법이 YYYY-MM-DD 형태로 되어 있을 때 이를 MM/DD/YYYY 형태로 바꾸고 싶다면\n",
+    "date = \"2022-03-18\"\n",
+    "pattern = r\"(\\d{4})-(\\d{2})-(\\d{2})\"\n",
+    "result = re.sub(pattern, r\"\\2/\\3/\\1\", date)\n",
+    "print(result)  # \"03/18/2022\"\n",
+    "\n",
+    "# 이름 순서 바꾸기\n",
+    "string = \"Kim, Yuna\"\n",
+    "pattern = r\"(\\w+),\\s*(\\w+)\"\n",
+    "result = re.sub(pattern, r\"\\2 \\1\", string)\n",
+    "print(result)  # \"Yuna Kim\""
    ]
   }
  ],
