--- a/edu/day5.ipynb
+++ b/edu/day5.ipynb
@@ -307,6 +307,121 @@
     "result = re.sub(pattern, r\"\\2 \\1\", string)\n",
     "print(result)  # \"Yuna Kim\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n",
+      "True\n",
+      "False\n",
+      "False\n",
+      "False\n"
+     ]
+    }
+   ],
+   "source": [
+    "import re\n",
+    "\n",
+    "def is_valid_email(email):\n",
+    "    pattern = r'^[a-zA-Z0-9+-_.]+@[a-zA-Z0-9-]+\\.[a-zA-Z0-9-.]+$'\n",
+    "    if re.match(pattern, email):\n",
+    "        return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "email1 = 'example@example.com'\n",
+    "email2 = 'example@example.co.kr'\n",
+    "email3 = 'example.example.com'\n",
+    "email4 = 'example@example.'\n",
+    "email5 = 'example@example'\n",
+    "\n",
+    "print(is_valid_email(email1))  # True\n",
+    "print(is_valid_email(email2))  # True\n",
+    "print(is_valid_email(email3))  # False\n",
+    "print(is_valid_email(email4))  # False\n",
+    "print(is_valid_email(email5))  # False\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "2\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "12\n",
+      "30\n",
+      "5\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Rectangle:\n",
+    "    # 클래스 변수 생성(생성자 메서드가 아닌 클래스 내부에서)\n",
+    "    count = 0\n",
+    "\n",
+    "    def __init__(self, width, height):\n",
+    "        self.width = width\n",
+    "        self.height = height\n",
+    "        Rectangle.count += 1\n",
+    "\n",
+    "    # 인스턴스 메서드 생성\n",
+    "    def area(self):\n",
+    "        return self.width * self.height\n",
+    "    \n",
+    "    # 클래스 메서드 생성\n",
+    "    @classmethod\n",
+    "    def print_count(cls):\n",
+    "        print(cls.count)\n",
+    "\n",
+    "\n",
+    "# 클래스 변수 값을 출력\n",
+    "print(Rectangle.count) # 출력 결과: 0\n",
+    "\n",
+    "# 인스턴스 생성\n",
+    "rectangle1 = Rectangle(3, 4)\n",
+    "rectangle2 = Rectangle(5, 6)\n",
+    "\n",
+    "# 인스턴스 생성 시 클래스 변수 값 증가\n",
+    "print(Rectangle.count) # 출력 결과: 2\n",
+    "\n",
+    "# 위의 코드를 클래스 메서드로 호출하기\n",
+    "Rectangle.print_count() # 출력 결과: 2\n",
+    "\n",
+    "# 인스턴스 변수에 접근하여 값 출력\n",
+    "print(rectangle1.width) # 출력 결과: 3\n",
+    "print(rectangle1.height) # 출력 결과: 4\n",
+    "print(rectangle2.width) # 출력 결과: 5\n",
+    "print(rectangle2.height) # 출력 결과: 6\n",
+    "\n",
+    "# 인스턴스 메서드 호출\n",
+    "print(rectangle1.area()) # 출력 결과: 12\n",
+    "print(rectangle2.area()) # 출력 결과: 30\n",
+    "\n",
+    "# 인스턴스 변수 값 변경\n",
+    "rectangle1.width = 5\n",
+    "print(rectangle1.width) # 출력 결과: 5\n",
+    "\n",
+    "# 인스턴스 메서드 호출\n",
+    "print(rectangle1.area()) # 출력 결과: 20\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
