--- a/edu/day6.ipynb
+++ b/edu/day6.ipynb
@@ -257,6 +257,42 @@
     "    plt.legend()\n",
     "    plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
+    "\n",
+    "# 2x2 서브플롯 예제\n",
+    "x = np.arange(0, 10, 0.1)\n",
+    "y1 = np.sin(x)\n",
+    "y2 = np.cos(x)\n",
+    "\n",
+    "# 2x2 서브플롯 생성\n",
+    "fig, axs = plt.subplots(2, 2, figsize=(8, 8))\n",
+    "\n",
+    "# 첫 번째 서브플롯\n",
+    "axs[0, 0].plot(x, y1)\n",
+    "axs[0, 0].set_title('Sine')\n",
+    "\n",
+    "# 두 번째 서브플롯\n",
+    "axs[0, 1].plot(x, y2)\n",
+    "axs[0, 1].set_title('Cosine')\n",
+    "\n",
+    "# 세 번째 서브플롯\n",
+    "axs[1, 0].plot(x, y1 + y2)\n",
+    "axs[1, 0].set_title('Sine + Cosine')\n",
+    "\n",
+    "# 네 번째 서브플롯\n",
+    "axs[1, 1].plot(x, y1 - y2)\n",
+    "axs[1, 1].set_title('Sine - Cosine')\n",
+    "\n",
+    "plt.show()\n"
+   ]
   }
  ],
  "metadata": {
